--- a/courses/static/css/base.css
+++ b/courses/static/css/base.css
@@ -57,3 +57,21 @@ a.secondary-button {
   padding: 10px 20px;
   margin: 10px 0;
 }
+
+.module {
+  padding: 10px 20px;
+  float: left;
+  width: 600px;
+}
+
+.module h3 {
+  margin: 20px 0 0;
+  padding: 0;
+  width: 100%;
+}
+
+.module p {
+  margin: 10px 0 20px;
+  width: 100%;
+  float: left;
+}
