--- a/courses/templates/courses/manage/course/list.html
+++ b/courses/templates/courses/manage/course/list.html
@@ -18,6 +18,11 @@
                     <a href="{% url 'course_module_update' course.id %}">
                         Edit modules
                     </a>
+                    {% if course.modules.count > 0 %}
+                        <a href="{% url 'module_content_list' course.modules.first.id %}">
+                        Manage contents
+                    </a>
+                    {% endif %}
                 </p>
             </div>
         {% empty %}
