reorder modules and their contents using jquery-ui

--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -23,6 +23,7 @@
         {% block content %}{% endblock %}
     </main>
     <script src='{% static 'js/jquery.min.js' %}'></script>
+    <script src='{% static 'js/jquery-ui.min.js' %}'></script>
     <script>
         $(document).ready(function() {
             {% block domready %}{% endblock %}
