implement course viewset with enroll action

--- a/courses/templates/courses/course/detail.html
+++ b/courses/templates/courses/course/detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load course %}
 
 {% block title %}
     {{ object.title }}
@@ -19,15 +20,20 @@
             </p>
             {{ object.overview|linebreaks }}
             {% if request.user.is_authenticated %}
-                <form action="{% url 'student_enroll_course' %}" method="post">
-                    {{ enroll_form }}
-                    {% csrf_token %}
-                    <input type="submit" value="Enroll now">
-                </form>
+                {% if request.user|enrolled:object %}
+                    <p><a href="{% url 'student_course_detail' object.id %}">Access course contents</a></p>
+                {% else %}
+                    <form action="{% url 'student_enroll_course' %}" method="post">
+                        {{ enroll_form }}
+                        {% csrf_token %}
+                        <input type="submit" value="Enroll now">
+                    </form>
+                {% endif %}
             {% else %}
                 <a href="{% url 'student_registration' %}">
                     Register to enroll
                 </a>
+                or <a href="{% url 'login' %}">Login</a>
             {% endif %}
         </div>
     {% endwith %}
