--- a/courses/static/css/header.css
+++ b/courses/static/css/header.css
@@ -3,6 +3,9 @@
   overflow: auto;
   padding: 10px 20px;
   border-bottom: 6px solid var(--main-color);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #header .logo {
@@ -12,7 +15,6 @@
   text-transform: uppercase;
   font-size: 24px;
   color: #fff;
-  float: left;
 }
 
 #header a {
@@ -21,7 +23,13 @@
 
 #header .menu {
   list-style: none;
-  float: right;
   margin: 0;
   padding: 0;
+  display: flex;
+  align-items: baseline;
 }
+
+#header .menu li {
+  margin: 0 10px;
+}
+
