--- a/courses/templates/base.html
+++ b/courses/templates/base.html
@@ -6,13 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}E-Learning{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}?version=2">
+    <link rel="stylesheet" href="{% static 'css/main.css' %}?version=9">
 </head>
 <body>
     <header id="header">
-        <a href="/" class='logo'>E-Learning</a>
+        <a href="{% url 'course_list' %}" class='logo'>E-Learning</a>
         <ul class="menu">
             {% if request.user.is_authenticated %}
+                <li><a href="{% url 'student_course_list' %}">My Courses</a></li>
                 <li><a href="{% url 'logout' %}">Sign out</a></li>
             {% else %}
                 <li><a href="{% url 'login' %}">Sign in</a></li>
