--- a/courses/templates/courses/content/image.html
+++ b/courses/templates/courses/content/image.html
@@ -1,1 +1,1 @@
-<p><img src="{{ item.image.url }}" alt="{{ item.title }}"></p>
+<p><img style='max-width: 400px;' src="{{ item.file.url }}" alt="{{ item.title }}"></p>
