--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -10,4 +10,43 @@
     </div>
 {% endblock %}
 
-{% block domready %}{% endblock domready %}
+{% block domready %}
+var url = 'ws://' + window.location.host + '/ws/chat/room/' + '{{ course.id}}/';
+var chatSocket = new WebSocket(url);
+
+var $chat = $('#chat');
+var $input = $('#chat-message-input');
+var $submit = $('#chat-message-submit');
+
+chatSocket.onmessage = function (e) {
+  var data = JSON.parse(e.data);
+  var message = data.message;
+
+  $chat.append('<div class="message">' + message + '</div>');
+  $chat.scrollTop($chat[0].scrollHeight);
+};
+
+chatSocket.onclose = function (e) {
+  console.error('Chat socket closed unexpectedly');
+};
+
+$submit.click(function () {
+  var message = $input.val();
+  if (message) {
+    // send message in JSON format
+    chatSocket.send(JSON.stringify({ message: message }));
+    // clear input
+    $input.val('');
+    // return focus
+    $input.focus();
+  }
+});
+
+$input.focus();
+$input.keyup(function (e) {
+  if (e.which === 13) {
+    $submit.click();
+  }
+});
+
+{% endblock domready %}
