--- a/chat/templates/chat/room.html
+++ b/chat/templates/chat/room.html
@@ -22,7 +22,20 @@ chatSocket.onmessage = function (e) {
   var data = JSON.parse(e.data);
   var message = data.message;
 
-  $chat.append('<div class="message">' + message + '</div>');
+  var dateOptions = {hour: 'numeric', minute: 'numeric', hour12: true};
+  var datetime = new Date(data['datetime']).toLocaleString('en', dateOptions);
+
+  var isMe = data.user == '{{ request.user }}';
+  var source = isMe ? 'me' : 'other';
+  var name = isMe ? 'Me' : data.user 
+
+  $chat.append(`
+  <div class="message ${source}">
+    <strong>${name}</strong>
+    <span class='date'>${datetime}</span><br>
+    ${message}
+  </div>
+  `);
   $chat.scrollTop($chat[0].scrollHeight);
 };
 
