--- a/django/chat/templates/chat/room.html
+++ b/django/chat/templates/chat/room.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block domready %}
-var url = 'wss://' + window.location.host + '/ws/chat/room/' + '{{ course.id}}/';
+var url = 'ws://' + window.location.host + '/ws/chat/room/' + '{{ course.id}}/';
 var chatSocket = new WebSocket(url);
 
 var $chat = $('#chat');
